middleware/poc/deployment/mongodb_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  ports:
  - name: mongo
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: mongodb
  type: NodePort

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      annotations:
        "scheduler.alpha.kubernetes.io/critical-pod": ""
        sidecar.istio.io/inject: "false"
      labels:
        app: mongodb
    spec:
      containers:
      - command:
        - mongod
        - "--bind_ip_all"
        - "--smallfiles"
        image: "mongo:3.6"
        imagePullPolicy: IfNotPresent
        name: mongodb
        ports:
        - containerPort: 27017
          name: mongo
